2.1 / <not relesed yet>

 - Fixed
   - --oneline could segmentation fault if database had total traffic values
     set but didn't have any daily or monthly traffic (Arch bug #60588)
   - No proper error message was produced when querying interface which didn't
     exist in the database
   - Several typos and spelling mistakes in documentation


2.0 / 21-Oct-2018

 - Fixed
   - Data rate calculations when using SI decimal prefixes
   - Workaround for filled arcs not drawn correctly with some versions
     of libgd (libgd/libgd#351)
 - New
   - C struct dump database has been replaced with sqlite database,
     full data import included from legacy databases of versions 1.3 - 1.18
   - User configurable data retention durations for all resolutions with
     following changed defaults:
                   v1.18     v2.0
       5 minutes     n/a      576   (48 hours)
       hours          24       96   (4 days)
       days           30       62   (2 full months)
       months         12       25   (2 full years)
       years         n/a      all
       top days       10       20
   - Option to select units to use SI decimal prefixes using calculations
     with powers of 1000 (IEC and JEDEC prefixes use powers of 1024)
   - Yearly and 5 minute resolution statistics
   - Pebibyte and exbibyte support
   - Options the configure the length of each list output
   - Option to limit the length of --json and --xml outputs
   - Hourly list output replaces the hourly graph when the -h parameter is used
   - Hourly graph is accessible with -hg / --hoursgraph parameter
   - Options -b / --begin and -e / --end for specifying query time range
   - Configuration comes with ISO 8601 date formats as new defaults
 - Removed
   - Weekly output
   - Merge of data from multiple interfaces to one output
   - --testkernel
   - --exportdb, use --oneline, --json or --xml instead
   - --importdb, -u / --update and related options using vnstat command