@@ -6,6 +6,8 @@
    - No proper error message was produced when querying interface which didn't
      exist in the database
    - Several typos and spelling mistakes in documentation
+   - Daemon:waittimesync_does_not_wait_with_new_interfaces test was failing if
+     the system used a time zone with a negative numeric value
 
 
 2.0 / 21-Oct-2018
